# MonkeyDong

./: .gitignore  CMakeLists.txt  MonkeyDong  README.md  ec  make.sh
.ec/: CMakeLists.txt  make.sh  remove_todo_tmp.sh  run.sh
dev/: .~lock.jump height.ods#  arrow.xcf  arrow16.xcf  arrow_sprites.xcf  arrowspritesheet.xcf  banana.xcf  boy.xcf  boy16.xcf  brick.xcf  brickssprites.xcf  hat.xcf  hat2.xcf  jump height.ods  lock.xcf  menu.xcf  monkey.xcf  monkey2.xcf  monkey3.xcf  monkey_action1.xcf  monkeydong.xcf  monkeydonsprites.xcf  nebula.xcf  player.xcf  player_sheet.xcf  rilamota1.xcf  tile1.xcf
src/: .arrow.c.swp  .arrow.h.swp  .component.c.swp  .component.h.swp  .main.c.swp  .main.h.swp  .mission1.c.swp  .mission1.h.swp  .monkey.c.swp  .monkey.h.swp  .player.c.swp  .player.h.swp  .stone.c.swp  .stone.h.swp  .system.c.swp  .system.h.swp  .time.c.swp  .time.h.swp  arrow.c  arrow.c~  arrow.h  arrow.z~  brick.c  brick.h  component.c  component.h  ground.c  ground.h  main.c  main.h  menu.c  menu.h  mission1.c  mission1.h  monkey.c  monkey.h  monkeydong.c  monkeydong.h  nebula.c  nebula.h  (+10 more)
vim/: monkeydong.vim
